--- a/css/global.css
+++ b/css/global.css
@@ -4,3 +4,17 @@
     margin: 0;
     padding: 0;
 }
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+header {
+    display: flex;
+    height: 80px;
+    width: 100%;
+    position: relative;
+}
+.navbar-head {
+    color: pink;
+}
