--- a/css/global.css
+++ b/css/global.css
@@ -5,16 +5,43 @@
     padding: 0;
 }
 body {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 header {
     display: flex;
-    height: 80px;
     width: 100%;
     position: relative;
+    background: pink;
+    font-weight: 500;
 }
+.nav-item {
+    margin: 0 10px;
+    font-size: larger;
+}
+
 .navbar-head {
-    color: pink;
+    color: black;
+    font-size: x-large;
+}
+
+#mobile-nav {
+    display: none;
+    padding: auto;
+}
+
+.nav-link img {
+    width: 60px;
+    height: 60px;
+    margin: 10px;
+}
+
+@media (max-width: 600px) {
+    #desktop-nav {
+        display: none;
+    }
+    #mobile-nav {
+        display: block;
+    }
 }
