--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 
+.body {
+  display: flex;
+  flex-direction: column;
+  min-width: 375px;
+}
 
 /* I do just like doing this initially I'm about to more actively put stuff together */
 * {
