--- a/src/game/game.css
+++ b/src/game/game.css
@@ -1,10 +1,5 @@
-.friends {
+.rank {
     font-size: large;
     text-align: center;
     list-style-position: inside;
-}
-
-.friendRequests{
-    color: #208d2d;
-    font-weight: bold;
 }
