--- a/src/global.css
+++ b/src/global.css
@@ -17,8 +17,8 @@ input {
     padding: 5px;
     border: 1px solid #ccc;
     border-radius: 6px;
-    margin: 12px 0;
-    width: 250px;
+    margin: 12px 5px;
+    width: 240px;
     box-sizing: border-box;
     transition: border-color 0.2s;
 }
