--- a/src/app.css
+++ b/src/app.css
@@ -36,7 +36,6 @@ footer {
     gap: 20px;
     text-decoration: none;
     padding: 20px;
-
 }
 
 footer a {
@@ -56,7 +55,7 @@ footer a {
     color: white;
     font-size: 60px;
     line-height: 70px;
-    font-family: "Bangers";
+    font-family: 'Bangers';
     font-weight: 300;
     text-align: center;
     margin: 3px 15px;
@@ -94,17 +93,16 @@ footer a {
 }
 
 @media (max-height: 600px) {
-  header {
-    display: none;
-  }
-  footer {
-    display: none;
-  }
-  main {
-    flex: 1 100vh;
-  }
+    header {
+        display: none;
+    }
+    footer {
+        display: none;
+    }
+    main {
+        flex: 1 100vh;
+    }
 }
-
 
 /* Has CSS that goes to all views */
 
