--- a/src/history/history.css
+++ b/src/history/history.css
@@ -4,16 +4,16 @@
     list-style-position: inside;
 }
 
-.gameHistory{
+.gameHistory {
     margin: 20px;
     padding: 15px;
     background-color: antiquewhite;
 }
 
-.winner{
+.winner {
     color: #208d2d;
     font-size: 60px;
     line-height: 70px;
-    font-family: "Bangers";
+    font-family: 'Bangers';
     margin: 3px 15px;
 }
