--- a/src/friends/friends.css
+++ b/src/friends/friends.css
@@ -11,4 +11,9 @@
 
 .request {
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+    padding: 5px;
+    border-radius: 10px;
+}
+.request button {
+    margin: 5px;
 }
