--- a/src/game/game.css
+++ b/src/game/game.css
@@ -3,3 +3,16 @@
     text-align: center;
     list-style-position: inside;
 }
+
+.active {
+    color: #208d2d;
+}
+
+.request {
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+    padding: 5px;
+    border-radius: 10px;
+}
+.request button {
+    margin: 5px;
+}
